Fixed Travelling Wizard name prefix. Fixes #42

--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -62,7 +62,7 @@ entity.ancientspellcraft\:skeleton_mage_minion.name=Skeleton Mage
 entity.ancientspellcraft\:spellcaster_entity.name=Sentinel
 entity.ancientspellcraft\:spellcaster_entity.name_conjured=%1$s's Conjured Sentinel
 entity.ancientspellcraft\:spirit_bear.name=Spirit Bear
-entity.ancientspellcraft\:traveller.prefix=Travelling
+entity.ancientspellcraft\:travelling.prefix=Travelling
 entity.ancientspellcraft\:travelling_wizard.name=Travelling Wizard
 entity.ancientspellcraft\:void_creeper.name=Void Creeper
 entity.ancientspellcraft\:wolf_minion.name=Wolf Minion
