Added a bunch of missing spell sounds

--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -870,7 +870,7 @@ spell.ancientspellcraft\:will_o_wisp.tag_has_no_name=The Biome Tag first needs t
 spell.ancientspellcraft\:will_o_wisp.try_listbiomes=The /listbiomes command can be used to list all the valid biome names
 spell.ancientspellcraft\:will_o_wisp.not_in_overworld=This spell only works in the Overworld
 spell.ancientspellcraft\:will_o_wisp.searching=The wisp is searching for the biome...
-spell.ancientspellcraft\:will_o_wisp.target_too_far=Biome is too far away, use wand Range Upgrades can increase the search radius.
+spell.ancientspellcraft\:will_o_wisp.target_too_far=Biome is too far away, wand Range Upgrades can increase the search radius.
 spell.ancientspellcraft\:will_o_wisp=Will o' Wisp
 spell.ancientspellcraft\:wizard_shield.desc=Allows the caster to charge up a potent shield which can deflect any damage. The shield quickly decays while not being charged.
 spell.ancientspellcraft\:wizard_shield=Wizard Shield
