More spell improvements

--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -509,7 +509,7 @@ misc.ancientspellcraft\:the_nether=The Nether
 potion.ancientspellcraft\:aquatic_agility=Aquatic Agility
 potion.ancientspellcraft\:arcane_aegis=Arcane Aegis
 potion.ancientspellcraft\:arcane_augmentation=Augmentation
-potion.ancientspellcraft\:astral_travel=Astral Travel
+potion.ancientspellcraft\:astral_projection=Astral Projection
 potion.ancientspellcraft\:bubble_head=Bubble Head
 potion.ancientspellcraft\:bulwark=Bulwark
 potion.ancientspellcraft\:burrow=Burrow
