Fixed Phial of The Eternal Flame missing description. Fixes #48

--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -292,7 +292,7 @@ item.ancientspellcraft\:charm_knowledge_orb.name=Orb of Knowledge
 item.ancientspellcraft\:charm_lightning_orb.desc2=Active Ability: Shake the orb to call forth a tremendous thunderstorm
 item.ancientspellcraft\:charm_lightning_orb.desc=Increases Lightning spell Potency by %1$s%%, reduces other element's spell Potency by 50%%
 item.ancientspellcraft\:charm_lightning_orb.name=Orb of the Thundering Skies
-item.ancientspellcraft\:charm_magic_light.desca=Acts as a mobile light source when in your Charm slot
+item.ancientspellcraft\:charm_magic_light.desc=Acts as a mobile light source when in your Charm slot
 item.ancientspellcraft\:charm_magic_light.name=Phial of The Eternal Flame
 item.ancientspellcraft\:charm_mana_flask.desc=This magically enchanted flask always refills itself over time
 item.ancientspellcraft\:charm_mana_flask.invalid_use=Must be used in the offhand, with a mana storing item in the mainhand
