Fixed the description of the Orb of Progression and Ring of Dagorim artefacts

--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -312,7 +312,7 @@ item.ancientspellcraft\:charm_power_orb.desc=Grants +20%% spell potency for all 
 item.ancientspellcraft\:charm_power_orb.name=Orb of Power
 item.ancientspellcraft\:charm_prismatic_spray.desc=Prismatic Spray can be focused at a single target
 item.ancientspellcraft\:charm_prismatic_spray.name=Perun's Prism
-item.ancientspellcraft\:charm_progression_orb.desc=The Knowledge Transfer spell transfers wand Progression experience from the source wand instead of Mana
+item.ancientspellcraft\:charm_progression_orb.desc=The Conduit spell transfers wand progression experience from the source wand instead of transferring mana
 item.ancientspellcraft\:charm_progression_orb.name=Orb of Progression
 item.ancientspellcraft\:charm_quicksand_walker.desc=You can walk over quicksand
 item.ancientspellcraft\:charm_quicksand_walker.name=Druid's Boots
@@ -409,7 +409,7 @@ item.ancientspellcraft\:ring_focus_crystal.desc=The ring's crystal intensifies t
 item.ancientspellcraft\:ring_focus_crystal.name=Focus Crystal Ring
 item.ancientspellcraft\:ring_lodestone.desc=Arcane Magnetism only pulls items based on your offhand item
 item.ancientspellcraft\:ring_lodestone.name=Lodestone Ring
-item.ancientspellcraft\:ring_mana_transfer.desc=Allows the wearer to transfer mana to another player's wand while sneak-casting Knowledge Transfer
+item.ancientspellcraft\:ring_mana_transfer.desc=Allows the wearer to transfer mana to another player's wand while sneak-casting the Conduit spell
 item.ancientspellcraft\:ring_mana_transfer.name=Ring of Dagorim
 item.ancientspellcraft\:ring_permanent_growth.desc=Your Grow Self spell's effect is permanent
 item.ancientspellcraft\:ring_permanent_growth.name=Ring of the Colossus
