Added state dependent textures for daily artefacts, added some new artefacts.

--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -261,6 +261,8 @@ item.ancientspellcraft\:charm_burrow.desc=The burrow spell can dig through stone
 item.ancientspellcraft\:charm_burrow.name=Gaia's Heart
 item.ancientspellcraft\:charm_cryostasis.desc=Grants a 25%% chance to activate Cryostasis when critically wounded
 item.ancientspellcraft\:charm_cryostasis.name=Winter's Heart
+item.ancientspellcraft\:charm_cube_phasing.name=Cube of Phasing
+item.ancientspellcraft\:charm_cube_phasing.desc=This golden inlaid magical cube holds powerful teleportation magic.\nRecharges over time in the Charm slot.\nUsing the cube blinks the player. \nSneak-cast to phase step.
 item.ancientspellcraft\:charm_earth_orb.desc2=Active Ability: Shaking the orb releases a cataclysmic earthquake
 item.ancientspellcraft\:charm_earth_orb.desc=Increases Earth spell Potency by %1$s%%, reduces other element's spell Potency by 50%%
 item.ancientspellcraft\:charm_earth_orb.name=Orb of Clay
@@ -302,7 +304,7 @@ item.ancientspellcraft\:charm_mana_orb.name=Tranquil Crystal Orb
 item.ancientspellcraft\:charm_necromancy_orb.desc2=Active Ability: Holding up the orb releases a deadly plague
 item.ancientspellcraft\:charm_necromancy_orb.desc=Increases Necromancy spell Potency by %1$s%%, reduces other element's spell Potency by 50%%
 item.ancientspellcraft\:charm_necromancy_orb.name=Orb of Impenetrable Darkness
-item.ancientspellcraft\:charm_omnicron.desc=This object of unknown origin is said to contain an archive about all spells created to date
+item.ancientspellcraft\:charm_omnicron.desc=This object of unknown origin is said to contain an archive about all spells created to date. It can be used as a rechargeable Scroll of Identification
 item.ancientspellcraft\:charm_omnicron.discover=Tapping into the knowledge of the Omnicron has revealed the spell - %1$s!
 item.ancientspellcraft\:charm_omnicron.name=The Omnicron
 item.ancientspellcraft\:charm_omnicron.no_mana=The cube doesn't have enough mana (%1$s required)
@@ -338,7 +340,7 @@ item.ancientspellcraft\:charm_philosophers_stone.name=Philosopher's Stone
 item.ancientspellcraft\:charm_philosophers_stone.empty=You've already used the Stone today.
 item.ancientspellcraft\:charm_philosophers_stone.desc=The central symbol of alchemy, this legendary stone can be used to create alchemical Essence. Essence can be brewed into healing potions or used on iron to turn it into gold.
 item.ancientspellcraft\:alchemical_essence.name=Essence
-item.ancientspellcraft\:alchemical_essence.desc=Can be brewed into healing potions with water bottles or into regeneration potions if brewed from healing potions. Applying it on iron bars transmutes the metal to Gold.
+item.ancientspellcraft\:alchemical_essence.desc=Can be brewed into healing potions with water bottles or into regeneration potions if brewed from healing potions. Applying it on iron ingots transmutes the metal to Gold.
 item.ancientspellcraft\:charm_war_horn.desc=The triumphant call of this horn inflicts fear and weakness in your enemies.
 item.ancientspellcraft\:charm_war_horn.name=Horn of War
 item.ancientspellcraft\:cornucopia.desc=This magical horn of plenty refills itself with food each day
@@ -369,6 +371,8 @@ item.ancientspellcraft\:devoritium_ingot.desc_extended=This dense metal seems to
 item.ancientspellcraft\:devoritium_ingot.name=Devoritium Ingot
 item.ancientspellcraft\:devoritium_sword.desc_extended=Devoritim weapons and tools are capable of suppressing and absorbing magic, weakening the magical abilities of both the wielder of them and the target they hit. Its impossible to enchant this rare metal as applied enchantments are immediately absorbed
 item.ancientspellcraft\:devoritium_sword.name=Devoritium Sword
+item.ancientspellcraft\:devoritium_scimitar.name=The Spellslayer
+item.ancientspellcraft\:devoritium_scimitar.desc=This legendary scimitar has slain countless wizards\nThe weapon has become unbreakable from all the absorbed magic
 item.ancientspellcraft\:enchanted_name_tag.desc_empty=Can be used to locate biomes with the Will o' Wisp Spell. Needs infusing with Magic Crystals at the Arcane Workbench
 item.ancientspellcraft\:enchanted_name_tag.desc_filled=Can be used to locate biomes with the Will o' Wisp Spell. Rename it with an Anvil after a biome name
 item.ancientspellcraft\:enchanted_name_tag.name=Biome Tag
@@ -482,6 +486,8 @@ item.ancientspellcraft\:transmutation.no_items_to_transmute=You must hold an ite
 item.ancientspellcraft\:transmutation.invalid_item=This item cannot be transformed.
 item.ancientspellcraft\:wizard_hat_ancient.name=Ancient Wizard Hat
 item.ancientspellcraft\:wizard_hat_ancient=Ancient Wizard Hat
+item.ancientspellcraft\:scepter_mind_control.name=Scepter of the Overlord
+item.ancientspellcraft\:scepter_mind_control.desc=Hitting a creature with the scepter permanently mind controls the creature\nYou can only charm one creature at a time with this item
 
 
 item.ebwizardry\:identification_scroll.desc=Identifies an unknown spell book, scroll or ritual book
