added the devoritium shield

--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -390,6 +390,9 @@ item.ancientspellcraft\:devoritium_ingot.desc_extended=This dense metal seems to
 item.ancientspellcraft\:devoritium_ingot.name=Devoritium Ingot
 item.ancientspellcraft\:devoritium_sword.desc_extended=Devoritim weapons and tools are capable of suppressing and absorbing magic, weakening the magical abilities of both the wielder of them and the target they hit. Its impossible to enchant this rare metal as applied enchantments are immediately absorbed
 item.ancientspellcraft\:devoritium_sword.name=Devoritium Sword
+item.ancientspellcraft\:devoritium_shield.desc_extended=Devoritim weapons and tools are capable of suppressing and absorbing magic, weakening the magical abilities of both the wielder of them and the target they hit. Its impossible to enchant this rare metal as applied enchantments are immediately absorbed
+item.ancientspellcraft\:devoritium_shield.name=Devoritium Shield
+item.ancientspellcraft\:devoritium_shield.desc=Devoritium shields are powerful anti-magic defensive weapons, increasing the wielder's resistance against magic
 item.ancientspellcraft\:devoritium_scimitar.name=The Spellslayer
 item.ancientspellcraft\:devoritium_scimitar.desc=This legendary scimitar has slain countless wizards\nThe weapon has become unbreakable from all the absorbed magic
 item.ancientspellcraft\:enchanted_name_tag.desc_empty=Can be used to locate biomes with the Will o' Wisp Spell. Needs infusing with Magic Crystals at the Arcane Workbench
