Renamed Fist of Wind -> Wind Blast

--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -792,8 +792,8 @@ spell.ancientspellcraft\:fire_ant_swarm.desc=Summons a Fire Ant Volcano from the
 spell.ancientspellcraft\:fire_ant_swarm=Fire Ant Swarm
 spell.ancientspellcraft\:firewall.desc=Conjures a wall of flame where the caster is pointing.
 spell.ancientspellcraft\:firewall=Firewall
-spell.ancientspellcraft\:fist_of_wind.desc=Causes the target and all nearby enemies to be blown upwards and away from you at speed.
-spell.ancientspellcraft\:fist_of_wind=Fist of Wind
+spell.ancientspellcraft\:wind_blast.desc=Causes the target and all nearby enemies to be blown upwards and away from you at speed.
+spell.ancientspellcraft\:wind_blast=Wind Blast
 spell.ancientspellcraft\:flint_shard.desc=Fires a flint shard in the direction you are pointing which damages its target.
 spell.ancientspellcraft\:flint_shard=Flint Shard
 spell.ancientspellcraft\:forcefend.desc=Redirects approaching projectiles at nearby enemies.
