Added 5 min cooldown to Eye of Foresight amulet

--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -266,7 +266,7 @@ item.ancientspellcraft\:amulet_rabbit.desc=Grants a 25%% chance to trigger a Spe
 item.ancientspellcraft\:amulet_rabbit.name=Rabbit Foot Amulet
 item.ancientspellcraft\:amulet_shield.desc=Grants a Wizard Shield effect when you are hurt (3 minutes cooldown)
 item.ancientspellcraft\:amulet_shield.name=Amulet of Shielding
-item.ancientspellcraft\:amulet_time_knot.desc=Your Time Knot loop resets immediately if you die while wearing this amulet
+item.ancientspellcraft\:amulet_time_knot.desc=Your Time Knot loop resets immediately if you die while wearing this amulet. This effect has a 5 minute cooldown
 item.ancientspellcraft\:amulet_time_knot.name=Eye of Foresight
 item.ancientspellcraft\:ancient_bound_stone.name=Ancient Bound Stone
 item.ancientspellcraft\:ancient_mana_flask.desc=Seems to have a rune carved into it
