--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -68,6 +68,7 @@ class_element.earth.wizard=Earth
 class_element.sorcery.wizard=Sorcerer
 class_element.healing.wizard=Healer
 item.ancientspellcraft\:battlemage_sword_novice.name=Spell Dagger
+item.ancientspellcraft\:battlemage_sword_armour_requirements_tooltip=Requires a full set of matching Battlemage Armour and an offhand mana source to use
 item.ancientspellcraft\:battlemage_sword_apprentice.name=Spell Dirk
 item.ancientspellcraft\:battlemage_sword_advanced.name=Spell Sword
 item.ancientspellcraft\:battlemage_sword_master.name=Spell Blade
@@ -655,7 +656,7 @@ spell.ancientspellcraft\:spectral_army.desc=Conjures an army of spectral soldier
 spell.ancientspellcraft\:animate_weapon.no_item=You must hold the item that you want to animate in your offhand!
 spell.ancientspellcraft\:animate_weapon.no_arrow=Without arrows, this bow won't shoot anything
 spell.ancientspellcraft\:antimagic_field=Anti-magic Field
-spell.ancientspellcraft\:antimagic_field.desc=Inhibits the casting of spells in an area, affecting the caster too.
+spell.ancientspellcraft\:antimagic_field.desc=Creates a magical field that prevents any spellcasts.
 spell.ancientspellcraft\:aquatic_agility.desc=Magically enchant your movement inside water to swim like a fish.
 spell.ancientspellcraft\:aquatic_agility=Aquatic Agility
 spell.ancientspellcraft\:arcane_aegis.desc=The complete incantation of the shielding ward, deflects most projectiles. Requires to hold a wand with mana.
@@ -1010,12 +1011,17 @@ tile.ancientspellcraft\:sentinel_block_large_iron.name=Greater Iron Sentinel
 tile.ancientspellcraft\:skull_watch.name=Skull Watch
 tile.ancientspellcraft\:sphere_cognizance.desc=Desc
 tile.ancientspellcraft\:sphere_cognizance.name=Sphere of Cognizance
+tile.ancientspellcraft\:sphere_cognizance.tooltip=Can research Stone Tablets and Spell Books
 tile.ancientspellcraft\:sphere_cognizance.known_book=You already know this item
 
 # tooltip
 tooltip.ancientspellcraft\:artefact_use.usage=Right click to use
 tooltip.ancientspellcraft\:missing_artemislib.disabled_item=This item is disabled because you don't have the ArtemisLib mod installed!
 tooltip.ancientspellcraft\:missing_artemislib.disabled_spell=This spell is disabled because you don't have the ArtemisLib mod installed!
+tooltip.ancientspellcraft\:ancient_relic_tooltip=Ancient Relic
+tooltip.ancientspellcraft\:ancient_relic_research=Research this item with the Sphere of Cognizance
+tooltip.ancientspellcraft\:mana_with_eternal_source_name=Mana\: %1$s/%2$s (%3$s)
+tooltip.ancientspellcraft\:no_mana_source=No mana source
 
 integration.antiqueatlas.marker.ancientspellcraft.battlemage_camp=Battlemage Camp
 integration.antiqueatlas.marker.ancientspellcraft.battlemage_keep=Battlemage Keep
