added enchanted filament

--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -76,6 +76,7 @@ item.ancientspellcraft\:battlemage_sword_hilt.name=Spell Sword Hilt
 item.ancientspellcraft\:battlemage_sword_blade.name=Crystal Silver Blade
 item.ancientspellcraft\:crystal_silver_ingot.name=Crystal Silver Ingot
 item.ancientspellcraft\:crystal_silver_nugget.name=Crystal Silver Nugget
+item.ancientspellcraft\:enchanted_filament.name=Enchanted Filament
 wizard_armour_class.sage=Sage
 wizard_armour_class.battlemage=Battlemage
 wizard_armour_class.warlock=Warlock
