updated loot tables, added new rare scrolls and runic plate to battlemage chests

--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -378,7 +378,7 @@ item.ancientspellcraft\:charm_mana_orb.name=Tranquil Crystal Orb
 item.ancientspellcraft\:charm_necromancy_orb.desc2=Active Ability: Holding up the orb releases a deadly plague
 item.ancientspellcraft\:charm_necromancy_orb.desc=Increases Necromancy spell Potency by %1$s%%, reduces other element's spell Potency by 50%%
 item.ancientspellcraft\:charm_necromancy_orb.name=Orb of Impenetrable Darkness
-item.ancientspellcraft\:charm_omnicron.desc=This object of unknown origin is said to contain an archive about all spells created to date. It can be used as a rechargeable Scroll of Identification
+item.ancientspellcraft\:charm_omnicron.desc=This magical device can identify almost every spells the same way Scrolls of Identification work\nIts mana pool can be refilled
 item.ancientspellcraft\:charm_omnicron.discover=Tapping into the knowledge of the Omnicron has revealed the spell - %1$s!
 item.ancientspellcraft\:charm_omnicron.name=The Omnicron
 item.ancientspellcraft\:charm_omnicron.no_mana=The cube doesn't have enough mana (%1$s required)
