--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -1156,7 +1156,6 @@ tile.ancientspellcraft\:devoritium_ore.name=Devoritium Ore
 tile.ancientspellcraft\:dimension_boundary.name=Pocket Dimension Boundary
 tile.ancientspellcraft\:dimension_focus.name=Pocket Dimension Focus
 tile.ancientspellcraft\:imbuement_altar_ruined.name=Ruined Imbuement Altar
-tile.ancientspellcraft\:imbuement_altar_ruined.name=Ruined Imbuement Altar
 tile.ancientspellcraft\:leaves_crystal_tree.name=Crystal Tree Leaves
 tile.ancientspellcraft\:log_crystal_tree.name=Crystal Tree
 tile.ancientspellcraft\:master_bolt.desc=Throw it at an entity or a block\nCan teleport to the bolt with the Master Bolt spell
@@ -1194,3 +1193,9 @@ integration.antiqueatlas.marker.ancientspellcraft.battlemage_camp=Battlemage Cam
 integration.antiqueatlas.marker.ancientspellcraft.battlemage_keep=Battlemage Keep
 integration.jei.category.ancientspellcraft\:arcane_anvil=Arcane Anvil
 integration.jei.category.ancientspellcraft\:sage_lectern=Sage Lectern
+item.ancientspellcraft\:charm_cube_duplication.name=Idarin's Cube
+item.ancientspellcraft\:charm_cube_duplication.desc=Scrolls of Duplication can duplicate wizard armor components and Tomes of Arcana
+item.ancientspellcraft\:charm_ice_arrow.name=TODO
+item.ancientspellcraft\:charm_ice_arrow.desc=TODO
+item.ancientspellcraft\:purifying_elixir_recipe.name=Lost Recipe
+item.ancientspellcraft\:purifying_elixir_recipe.desc=Purifying Elixir
