feat:  Added Guardian Blade charm

--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -328,6 +328,8 @@ item.ancientspellcraft\:charm_bucket_coal.empty=You search through the bucket bu
 item.ancientspellcraft\:charm_bucket_coal.name=Bottomless Coal Bucket
 item.ancientspellcraft\:charm_burrow.desc=The burrow spell can dig through stone
 item.ancientspellcraft\:charm_burrow.name=Gaia's Heart
+item.ancientspellcraft\:charm_guardian_blade.desc=This sword refuses to be unsheathed by anyone, but it comes for your aid when in the greatest trouble
+item.ancientspellcraft\:charm_guardian_blade.name=Guardian Blade
 item.ancientspellcraft\:charm_clover.desc=With this lucky item in your pocket, you have 5%% chance to find an additional artefact in Shrine chests
 item.ancientspellcraft\:charm_clover.name=Four-Leaf Clover
 item.ancientspellcraft\:charm_wild_catalyst.desc=Throwing this crystal into a Transportation Portal changes its location to a random, far-away location\nSingle Use
